// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printer issues can convert + + 1`] = `
"\\"use strict\\";
c = (10.0, + + 15);
"
`;

exports[`printer issues understands optional expression 1`] = `
"\\"use strict\\";
const a = {};
const b = a?.c;
"
`;

exports[`printer issues understands optional expression in arrow func 1`] = `
"\\"use strict\\";
const a = {};
const b = () => a?.c;
"
`;
